--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: plusone_counter
-description: A new Flutter project.
+description: Daily Counter app
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -30,15 +30,33 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  fluttertoast: ^8.0.9
+  package_info_plus: ^3.0.3
+  flutter_svg: ^1.1.1+1
+  intl: ^0.17.0
+  shared_preferences: ^2.0.15
+  image_picker: ^0.8.5+3
+  syncfusion_flutter_charts: ^20.3.48
+  shimmer: ^2.0.0
+  get: ^4.6.5
+  uuid: ^3.0.7
+  lottie: ^2.1.0
+  hive: ^2.2.3
+  path_provider: ^2.0.11
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.3.3
+  hive_generator: ^2.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -74,6 +92,9 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  assets:
+    - assets/images/
+    - assets/icons/
   # fonts:
   #   - family: Schyler
   #     fonts:
