--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   lottie: ^2.1.0
   hive: ^2.2.3
   path_provider: ^2.0.11
+  audioplayers: ^3.0.1
+  percent_indicator: ^4.2.3
 
 
 
@@ -57,6 +59,12 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.3.3
   hive_generator: ^2.0.0
+  flutter_launcher_icons: ^0.13.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/plus_one_app_icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -95,6 +103,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/music/
   # fonts:
   #   - family: Schyler
   #     fonts:
